# drv_chip_gd32h7xx

./: BUILD.gn
GD32H77x_Firmware_Library_V0.2.0/: BUILD.gn
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_ADC1_routine_parallel/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_TIMER_trigger_inserted_channel/: gd32h77x_it.c  main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_channel_differential_mode/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_routine_channel_discontinuous_mode/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_routine_channel_with_DMA/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC0_software_trigger_routine_channel_polling/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC1_analog_watchdog0/: gd32h77x_it.c  main.c  readme.txt  systick.h
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC1_analog_watchdog1/: gd32h77x_it.c  main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/ADC/ADC1_resolution_oversample/: main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Examples/CMP/Window/: main.c  (+1 more)
GD32H77x_Firmware_Library_V0.2.0/Template/: gd32h77x_it.c  main.c  readme.txt
GD32H77x_Firmware_Library_V0.2.0/Template/IAR_project/: Project.ewd  Project.ewp  Project.ewt
GD32H77x_Firmware_Library_V0.2.0/Template/Keil_project/: Project.uvoptx  Project.uvprojx
GD32H77x_Firmware_Library_V0.2.0/Utilities/: gd32h77di_eval.c  gd32h77di_eval.h  gd32h77ei_eval.c  gd32h77ei_eval.h
GD32H77x_Firmware_Library_V0.2.0/src/: gd32h77x_redirect.c  startup_gd32h77x.c
(+1040 files in other folders)
